--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,140 +1,131 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>తోటరామన్నవూరు వేంకటేశ్వరస్వామి దేవస్థానము</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link href="../assets/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
-  </head>
 
-  <body>
-    <table width="100%" border="0" cellspacing="0" cellpadding="0" id="Table1">
-      <tr>
-        <td align="center" valign="top">
-          <!-- Header Starts -->
-          <header>
-            <!--
+<head>
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <title>తోటరామన్నవూరు వేంకటేశ్వరస్వామి దేవస్థానము</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link href="../assets/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
+</head>
+
+<body>
+  <table width="100%" border="0" cellspacing="0" cellpadding="0" id="Table1">
+    <tr>
+      <td align="center" valign="top">
+        <!-- Header Starts -->
+        <header>
+          <!--
               <a onclick="alert('hello thanks for visiting our site...')">
             -->
-            <table
-              width="100%"
-              border="0"
-              cellspacing="0"
-              cellpadding="0"
-              id="Table2"
-            >
-              <tr>
-                <td class="Head-tab">
-                  <table
-                    width="100%"
-                    border="0"
-                    cellspacing="0"
-                    cellpadding="0"
-                    align="center"
-                    id="Table4"
-                  >
-                    <tr>
-                      <td
-                        align="center"
-                        valign="top"
-                        style="background-image: url(../assets/NewImages/gopuram-Mini-Icon.png); background-position: bottom; background-repeat: repeat-x;"
-                      >
-                        <table
-                          width="1002"
-                          border="0"
-                          cellspacing="0"
-                          cellpadding="0"
-                          align="center"
-                          class="head-tbl"
-                          id="Table5"
-                        >
-                          <tr>
-                            <td width="150">
-                              <img
-                                src="../assets/NewImages/Nagalamma123.png"
-                                alt="TVD Logo"
-                              />
-                            </td>
-                            <td width="612" align="center">
-                              <img
-                                src="../assets/NewImages/HD-TXT3.png"
-                                width="526"
-                                height="93"
-                              />
-                            </td>
-                            <td
-                              width="240"
-                              align="right"
-                              style="vertical-align: top;"
-                            >
-                              <img
-                                src="../assets/NewImages/TTD-Head-Img.png"
-                                height="131"
-                              />
-                            </td>
-                          </tr>
-                        </table>
-                      </td>
-                    </tr>
-                  </table>
-                </td>
-              </tr>
+          <table width="100%" border="0" cellspacing="0" cellpadding="0" id="Table2">
+            <tr>
+              <td class="Head-tab">
+                <table width="100%" border="0" cellspacing="0" cellpadding="0" align="center" id="Table4">
+                  <tr>
+                    <td align="center" valign="top"
+                      style="background-image: url(../assets/NewImages/gopuram-Mini-Icon.png); background-position: bottom; background-repeat: repeat-x;">
+                      <table width="1002" border="0" cellspacing="0" cellpadding="0" align="center" class="head-tbl"
+                        id="Table5">
+                        <tr>
+                          <td width="150">
+                            <img src="../assets/NewImages/Nagalamma123.png" alt="TVD Logo" />
+                          </td>
+                          <td width="612" align="center">
+                            <img src="../assets/NewImages/HD-TXT3.png" width="526" height="93" />
+                          </td>
+                          <td width="240" align="right" style="vertical-align: top;">
+                            <img src="../assets/NewImages/TTD-Head-Img.png" height="131" />
+                          </td>
+                        </tr>
+                      </table>
+                    </td>
+                  </tr>
+                </table>
+              </td>
+            </tr>
 
-              <tr>
-                <td class="main-menu-btm"></td>
-              </tr>
-            </table>
+            <tr>
+              <td class="main-menu-btm"></td>
+            </tr>
+          </table>
 
-            <!-- </a> -->
-          </header>
-          <!-- Header Ends -->
-        </td>
-      </tr>
-      <tr>
-        <td>
-          <div class="container">
-            <nav class="navbar navbar-expand-lg navbar-light bg-light">
-              <ul class="nav navbar-nav">
-                <li>
-                  <a routerLinkActive="active" routerLink="gallery">Gallery</a>
-                </li>
-                <li>
-                  <a routerLinkActive="active" routerLink="sevas">Seva</a>
-                </li>
-                <li>
-                  <a routerLinkActive="active" routerLink="donors">Donors</a>
-                </li>
-                <li>
-                  <a routerLinkActive="active" routerLink="newdonation"
-                    >new Donation</a
-                  >
-                </li>
-              </ul>
-              <ul class="nav navbar-nav pull-right">
-                <li>
-                  <a routerLinkActive="active" routerLink="login">Sign In</a>
-                  <!-- <input type="button" (click)="onLogout()" value="Logout" /> -->
-                </li>
-              </ul>
-            </nav>
-            <router-outlet> </router-outlet>
-          </div>
-        </td>
-      </tr>
-    </table>
+          <!-- </a> -->
+        </header>
+        <!-- Header Ends -->
+      </td>
+    </tr>
+    <tr>
+      <td>
+        <div class="container">
+            <nav class="navbar navbar-default">
+                <div class="container-fluid">
+                  <!-- Brand and toggle get grouped for better mobile display -->
+                  <div class="navbar-header">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                      <span class="sr-only">Toggle navigation</span>
+                      <span class="icon-bar"></span>
+                      <span class="icon-bar"></span>
+                      <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand" href="#">Home</a>
+                  </div>
+              
+                  <!-- Collect the nav links, forms, and other content for toggling -->
+                  <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                    <ul class="nav navbar-nav">
+                      <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
+                      <li><a href="#">Link</a></li>
+                      <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                          <li><a href="#">Action</a></li>
+                          <li><a href="#">Another action</a></li>
+                          <li><a href="#">Something else here</a></li>
+                          <li role="separator" class="divider"></li>
+                          <li><a href="#">Separated link</a></li>
+                          <li role="separator" class="divider"></li>
+                          <li><a href="#">One more separated link</a></li>
+                        </ul>
+                      </li>
+                    </ul>
+                    <form class="navbar-form navbar-left">
+                      <div class="form-group">
+                        <input type="text" class="form-control" placeholder="Search">
+                      </div>
+                      <button type="submit" class="btn btn-default">Submit</button>
+                    </form>
+                    <ul class="nav navbar-nav navbar-right">
+                      <li><a href="#">Link</a></li>
+                      <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                          <li><a href="#">Action</a></li>
+                          <li><a href="#">Another action</a></li>
+                          <li><a href="#">Something else here</a></li>
+                          <li role="separator" class="divider"></li>
+                          <li><a href="#">Separated link</a></li>
+                        </ul>
+                      </li>
+                    </ul>
+                  </div><!-- /.navbar-collapse -->
+                </div><!-- /.container-fluid -->
+              </nav>
+          <router-outlet> </router-outlet>
+        </div>
+      </td>
+    </tr>
+  </table>
 
-    <!-- Footer -->
+  <!-- Footer -->
 
-    <footer class="footer footer-bg">
-      <div class="container">
-        <span style="float:left;"
-          >© 2018 Copyright:
-          <a href="http://cryantech.com/"> CryanTech.com</a></span
-        >
+  <footer class="footer footer-bg">
+    <div class="container">
+      <span style="float:left;">© 2018 Copyright:
+        <a href="http://cryantech.com/"> CryanTech.com</a></span>
 
-        <span style="float:right;">
-          <!--
+      <span style="float:right;">
+        <!--
       <a href="https://twitter.com/KanakarajuNaidu" id="home">Twitter</a>
       <a
         href="https://www.blogger.com/blogger.g?blogID=5260392799829518383#allposts"
@@ -144,28 +135,22 @@
       >
     -->
 
-          <audio
-            preload="auto"
-            id="id12"
-            controls="controls"
-            autoplay="true"
-            style="background-color: transparent; opacity: 0.9; width: 50px; background-position: left;"
-            loop="loop"
-            onclick="stopAudio();"
-            src="../assets/music/slogan.mp3"
-          ></audio>
-        </span>
-      </div>
-    </footer>
+        <audio preload="auto" id="id12" controls="controls" autoplay="true"
+          style="background-color: transparent; opacity: 0.9; width: 50px; background-position: left;" loop="loop"
+          onclick="stopAudio();" src="../assets/music/slogan.mp3"></audio>
+      </span>
+    </div>
+  </footer>
 
-    <script type="text/javascript">
-      function stopAudio() {
-        var audioId = document.getElementById('id12');
-        audioId.pause();
-        audioId.currentTime = 0;
-      }
-    </script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <script src="../assets/bootstrap/js/bootstrap.min.js"></script>
-  </body>
+  <script type="text/javascript">
+    function stopAudio() {
+      var audioId = document.getElementById('id12');
+      audioId.pause();
+      audioId.currentTime = 0;
+    }
+  </script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+  <script src="../assets/bootstrap/js/bootstrap.min.js"></script>
+</body>
+
 </html>
