--- a/src/app/user/sign-in/sign-in.component.html
+++ b/src/app/user/sign-in/sign-in.component.html
@@ -1,20 +1,32 @@
-<div>
-  <img src="assets/img/single_user.png" id="icon" alt="User Icon" />
-</div>
-<form #signInForm="ngForm" (ngSubmit)="signInForm.valid && onSubmit(signInForm)">
-  <input type="text" name="email" #email="ngModel" [(ngModel)]="model.email" placeholder="Email" [pattern]="emailRegex"
-    required [ngClass]="{'invalid-textbox' :signInForm.submitted && !email.valid }">
-  <div *ngIf="signInForm.submitted && email.errors?.pattern">
-    <label class="validation-message">Invalid email address.</label>
-  </div>
-  <input type="password" name="password" #password="ngModel" [(ngModel)]="model.password" placeholder="Password"
-    required minlength="4" [ngClass]="{'invalid-textbox' :signInForm.submitted && !password.valid }">
-  <div *ngIf="signInForm.submitted && password.errors?.minlength">
-    <label class="validation-message">Minimum 4 characters.</label>
-  </div>
-  <input type="submit" value="Sign In">
-</form>
-<!-- Error message -->
-<div class="alert" *ngIf="serverErrorMessages">
-  {{serverErrorMessages}}
+<div class="login-form">
+  <form action="/examples/actions/confirmation.php" method="post">
+    <h2 class="text-center">Sign in</h2>
+    <div class="text-center social-btn">
+      <a href="#" class="btn btn-primary btn-block"><i class="fa fa-facebook"></i> Sign in with <b>Facebook</b></a>
+      <a href="#" class="btn btn-info btn-block"><i class="fa fa-twitter"></i> Sign in with <b>Twitter</b></a>
+      <a href="#" class="btn btn-danger btn-block"><i class="fa fa-google"></i> Sign in with <b>Google</b></a>
+    </div>
+    <div class="or-seperator"><i>or</i></div>
+    <div class="form-group">
+      <div class="input-group">
+        <span class="input-group-addon"><i class="fa fa-user"></i></span>
+        <input type="text" class="form-control" name="username" placeholder="Username" required="required">
+      </div>
+    </div>
+    <div class="form-group">
+      <div class="input-group">
+        <span class="input-group-addon"><i class="fa fa-lock"></i></span>
+        <input type="password" class="form-control" name="password" placeholder="Password" required="required">
+      </div>
+    </div>
+    <div class="form-group">
+      <button type="submit" class="btn btn-success btn-block login-btn">Sign in</button>
+    </div>
+    <div class="clearfix">
+      <label class="pull-left checkbox-inline"><input type="checkbox"> Remember me</label>
+      <a href="#" class="pull-right text-success">Forgot Password?</a>
+    </div>
+
+  </form>
+  <div class="hint-text small">Don't have an account? <a href="#" class="text-success">Register Now!</a></div>
 </div>
